HelloUltraviolet/Fixtures/RejectedSource/Procedures/MissingReturnType/Source/Main.uv
//! Rejected procedure specimen for a missing return type annotation.

public procedure missingReturnTypeReference() {
    return 1
}
